# CSStudies

./: .gitignore  README.md
1. Arrays/: firstDuplicate.py
2. Linked lists/: isLIstPalindrome.rb  rearrageLastN.py  reverseNodesInKGroups.py
4. Trees/: deleteFromBST.py  hasPathWithGivenSum.py
5. Heaps/: nextLarger.py
CodeSignal/1. Arrays/: firstNotRepeatingCharacter.py  rotateImage.exs
CodeSignal/2. Linked lists/: addTwoHugeNumbers.rb
CodeSignal/3. Hash tables/: groupingDishes.py  possibleSums.py  swapLexOrder.py
CodeSignal/4. Trees/: findSubstrings.py  kthSmallestInBST.py  restoreBinaryTree.py
CodeSignal/5. Heaps/: kthLargestElement.py  nearestGreater.py
Personal/: avl.py
Personal/Arrays/: bubble_sort.py  selection_sort.py
Personal/Graphs/: prims.py
Personal/Heaps/: max_heap.py
Personal/Trees/: bst.py  level_order.py  validate_bst.py
code-signal/1. Arrays/: isCryptSolution.exs  sudoku2.exs
code-signal/2. Linked lists/: mergeTwoLinkedLists.py  removeKFromList.py
code-signal/3. Hash tables/: areFollowingPatterns.py  containsCloseNums.py
code-signal/4. Trees/: findProfession.py  isSubtree.py  isTreeSymmetric.py
code-signal/5. Heaps/: countClouds.py  decodeString.py  minimumOnStack.py  simplifyPath.py
code-signal/6. Graphs/: hasDeadlocks.py
software-engineering/: .gitignore  AGENTS.md  CHANGELOG.md  rag-implementation-plan.md  research-report.md  staff-interview-guide.md  staff-interview-questions.md
software-engineering/src/rag/: .gitignore  README.md  chunking.py  config.py  db.py  ingest_pdfs.py  pyproject.toml  query_db.py
(+151 files in other folders)
