[project]
name = "rag-engine"
version = "0.1.0"
description = "Motor de RAG local para libros de ingeniería de software"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.6.3,<1.0.0",
    "pymupdf>=1.25.3,<2.0.0",
    "sentence-transformers>=3.4.1,<4.0.0",
    "tqdm>=4.67.3,<5.0.0",
    "typer>=0.12.3,<1.0.0",
]
